content is updated

--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
                 <div class=" text-center space-y-4">
                   <div class="radial-progress text-primary lg:justify-center lg:items-center" style="--value:70;" role="progressbar">70%</div>
                   <h3 class="text-xl font-bold">Prayer Facility</h3>
-                  <p class="opacity-50"> Here's a general overview of what each program might entail. </p>
+                  <p class="opacity-50"> Join us as we embark on this journey of Hockey Tournament. </p>
                 </div>
                 <div class=" text-center space-y-4">
                   <div class="radial-progress text-secondary lg:justify-center lg:items-center" style="--value:70;" role="progressbar">80%</div>
                   <h3 class="text-xl font-bold">Experienced Coach</h3>
-                  <p class="opacity-50"> Here's a general overview of what each program might entail.</p>
+                  <p class="opacity-50"> Join us as we embark on this journey of Hockey Tournament.</p>
                 </div>
                 <div class=" text-center space-y-4">
                   <div class="radial-progress text-tersiary lg:justify-center lg:items-center" style="--value:70;" role="progressbar">90%</div>
                   <h3 class="text-xl font-bold">Senior Player</h3>
-                  <p class="opacity-50"> Here's a general overview of what each program might entail. </p>
+                  <p class="opacity-50"> Join us as we embark on this journey of Hockey Tournament. </p>
                 </div>
                 <div class=" text-center space-y-4">
                   <div class="radial-progress text-primary lg:justify-center lg:items-center" style="--value:70;" role="progressbar">65%</div>
                   <h3 class="text-xl font-bold">Training Ground</h3>
-                  <p class="opacity-50"> Here's a general overview of what each program might entail. </p>
+                  <p class="opacity-50"> Join us as we embark on this journey of Hockey Tournament. </p>
                 </div>
               </div>
         </section>
