search bar added

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <li><a>Contact</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end flex mr-20">
-                  <img src="images/search.png" alt="">
+                <div class="navbar-end">
+                  <img class="hidden lg:flex lg:mr-20" src="images/search.png" alt="">
                   <a class="btn bg-[#FF4240] text-white font-bold">Get Ticket</a>
                 </div>
               </div>
